applications/triton/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triton
  namespace: triton
  labels:
    app.kubernetes.io/name: triton
    app.kubernetes.io/part-of: triton
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: triton
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  - name: grpc
    port: 8001
    targetPort: 8001
  - name: metrics
    port: 8002
    targetPort: 8002
