applications/triton/base/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton-grpc
  namespace: triton
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - triton-grpc.askcollections.com
    secretName: triton-grpc-tls
  rules:
  - host: triton-grpc.askcollections.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: triton
            port:
              number: 8001
