applications/triton/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton
  namespace: triton
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - triton.askcollections.com
    secretName: triton-tls
  rules:
  - host: triton.askcollections.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: triton
            port:
              number: 8000
